# CardsAlgorithm

./: .gitignore  CMakeLists.txt  README
majong/: hupaialgorithm.cpp  hupaialgorithm.h  mahjongalgo.cpp  mahjongalgo.h  mjalgorithm.h  mjcard.cpp  mjcard.h
poker/: commonalgorithm.cpp  commonalgorithm.h  pkcard.h  playcardinfo.cpp  playcardinfo.h  pokeralgorithm.cpp  pokeralgorithm.h
src/: icard.h
src/mahjong/: mahjongcalc.h  mahjonghutype.cpp  mjcard.cpp
src/mahjong/mjcardtype/: mahjonghutype.h
src/majong/: majongcalc.cpp  majongcalc.h  majonghutype.h  majongop.cpp  majongop.h  mjalgorithm.cpp  mjalgorithm.h  mjcard.cpp  mjcard.h
src/majong/mjcardtype/: majonghutype.cpp  majonghutype.h
src/poker/: commonalgorithm.cpp  commonalgorithm.h  pkcard.cpp  pkcard.h  playcardinfo.h  pokeralgorithm.cpp  pokeralgorithm.h
src/unittest/: CMakeLists.txt  calctest.cpp  test.cpp
src/zipai/: zipaialgorithm.cpp  zipaialgorithm.h
zipai/: ZpHuPaiAlgorithm.cpp  ZpHuPaiAlgorithm.h  zipaialgorithm.h
